--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,17 +14,16 @@ android {
         versionCode 1
         versionName "1.0"
 
-        //参数说明
+        ndk {
+            //设置支持的SO库架构
+            abiFilters 'armeabi', 'x86','armeabi - v7a','x86_64', 'arm64 - v8a'
+        }
         manifestPlaceholders = [
-                GETUI_APP_ID : "81NW0fXkm96iLav9XEzJf6",
-                GETUI_APP_KEY : "ATuFOELg446lGtbrQUDQ61",
-                GETUI_APP_SECRET : "2kh8c2304w6oIhezOfzXe3",
-                PACKAGE_NAME : applicationId
+                JPUSH_PKGNAME : applicationId,
+                JPUSH_APPKEY : " f2becb1c30528355b9b7a853", //JPush上注册的包名对应的appkey.
+                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
         ]
 
-        ndk {
-            abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "mips", "mips64", "x86", "x86_64"
-        }
     }
     buildTypes {
         release {
@@ -40,11 +39,10 @@ android {
     compileOptions {
         encoding "UTF-8"
     }
-    packagingOptions {
-        exclude 'assets/getui_popup_bg.9.png'
-        exclude 'assets/getui_popup_close.png'
-
+    sourceSets.main {
+        jniLibs.srcDirs = ['libs']  // <-- so文件和libs库需要添加这个配置，我由于没加，初始化失败
     }
+
 }
 
 dependencies {
@@ -52,7 +50,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:support-v4:24.2.0'
-
     //face++人脸识别包
     compile files('libs/faceppofflinesdk.jar')
     compile files('libs/faceppsdk.jar')
@@ -60,8 +57,9 @@ dependencies {
     compile files('libs/universal-image-loader-1.9.2.jar')
     compile files('libs/gson-2.2.2.jar')
     //个推包
-    compile 'com.getui:sdk:2.9.0.0'
-    compile files('libs/GetuiSDK2.9.0.0.jar')
     compile files('libs/json_simple-1.1.jar')
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+
+    compile files('libs/jcore-android_v1.1.0.jar')
+    compile files('libs/jpush-android_v3.0.1.jar')
 }
