--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     aaptOptions.useNewCruncher = false
 
     defaultConfig {
-        applicationId "com.yvision.yvision0829"
+        applicationId "com.yvision"
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
