--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,15 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    buildToolsVersion '25.0.0'
 
     aaptOptions.cruncherEnabled = false
     aaptOptions.useNewCruncher = false
+
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 
     defaultConfig {
         applicationId "com.yvision"
@@ -31,11 +36,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets {
-        main {
-            jniLibs.srcDirs = ['libs']
-        }
-    }
+
     compileOptions {
         encoding "UTF-8"
     }
@@ -55,11 +56,12 @@ dependencies {
     compile files('libs/faceppsdk.jar')
     //图片缓存包
     compile files('libs/universal-image-loader-1.9.2.jar')
+    //gson
     compile files('libs/gson-2.2.2.jar')
     //个推包
     compile files('libs/json_simple-1.1.jar')
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
-
     compile files('libs/jcore-android_v1.1.0.jar')
     compile files('libs/jpush-android_v3.0.1.jar')
+    compile files('libs/AMap2DMap_2.9.2_AMapSearch_3.6.1_AMapLocation_3.1.0_20161122.jar')
 }
