--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
     <application
         android:name="com.yvision.common.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/logo"
+        android:icon="@mipmap/logo_02"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
